@@ -1,5 +1,5 @@
 #############################################################################
-#  $Id: Gendersllnl.pm.in,v 1.2 2005-05-07 18:23:23 achu Exp $
+#  $Id: Gendersllnl.pm.in,v 1.3 2007-03-13 18:18:19 chu11 Exp $
 #############################################################################
 #  Copyright (C) 2001-2003 The Regents of the University of California.
 #  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -370,7 +370,8 @@ will be used.  Returns undef if file cannot be read.
 =item B<$obj-E<gt>get_cluster([$node])>
 
 Returns the name of the specified node's cluster.  If a node is not
-specified, the current node is assumed.
+specified, the current node is assumed.  Returns empty string on
+error.
 
 =item B<$obj-E<gt>getaltnodes([$attr, [$val]])>
 
